--- a/adv_ml_music_recommendation/database_connect_example.ipynb
+++ b/adv_ml_music_recommendation/database_connect_example.ipynb
@@ -121,20 +121,96 @@
     "df = pd.read_sql(query, engine)\n",
     "\n",
     "# Display the first few rows\n",
-    "print(df.head())\n",
-    "\n",
-    "# Close the engine connection (optional, since SQLAlchemy handles connections)\n",
-    "engine.dispose()"
+    "print(df.head())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-16T21:09:09.592308Z",
-     "start_time": "2025-01-16T21:09:09.554261Z"
+     "end_time": "2025-01-16T21:16:54.213607Z",
+     "start_time": "2025-01-16T21:16:54.184610Z"
     }
    },
    "id": "580d1551bdf15058",
-   "execution_count": 2
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['id', 'name', 'duration', 'popularity', 'explicit', 'preview_url',\n",
+      "       'uri', 'album_id'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-16T21:16:56.737053Z",
+     "start_time": "2025-01-16T21:16:56.734364Z"
+    }
+   },
+   "id": "b9202f7d8e159a30",
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       id               name  followers  \\\n",
+      "0  0001o8bRlvQld8j74gpOuo          chillwave          0   \n",
+      "1  0003EwMBT8iPys9zW1KWvu  Vaporwave Race 64          0   \n",
+      "2  0005GNkME45OHjWo7sW08R         baile funk          1   \n",
+      "3  0008UlLl30775rOH6Vs05d     Chorale week 2          0   \n",
+      "4  00094CyFT9Nj8XiQRTFbfB    Relax Your Mind          0   \n",
+      "\n",
+      "                                                 uri  total_tracks  \n",
+      "0  spotify:user:1156860855:playlist:0001o8bRlvQld...           147  \n",
+      "1  spotify:user:1261134915:playlist:0003EwMBT8iPy...            30  \n",
+      "2  spotify:user:giovannapaz.santos:playlist:0005G...           115  \n",
+      "3  spotify:user:heqfw93c7k16rpxytk6p0lsoj:playlis...            11  \n",
+      "4  spotify:user:w5j78kk7hqnzn7l1a9deicafm:playlis...            73  \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"SELECT * FROM playlist LIMIT 10\"\n",
+    "\n",
+    "# Fetch data into a Pandas DataFrame\n",
+    "df = pd.read_sql(query, engine)\n",
+    "\n",
+    "print(df.head())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-16T21:18:36.407392Z",
+     "start_time": "2025-01-16T21:18:36.396654Z"
+    }
+   },
+   "id": "e2896a592e46a0b",
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Close the engine connection (optional, since SQLAlchemy handles connections)\n",
+    "engine.dispose()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "263f8012be1d0d2a"
   }
  ],
  "metadata": {
