added hybrid recommender

--- a/adv_ml_music_recommendation/database_connect_example.ipynb
+++ b/adv_ml_music_recommendation/database_connect_example.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-16T21:08:47.687278Z",
-     "start_time": "2025-01-16T21:08:47.288154Z"
+     "end_time": "2025-01-20T20:23:46.897483Z",
+     "start_time": "2025-01-20T20:23:46.464224Z"
     }
    },
    "outputs": [
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17231/461319718.py:17: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/tmp/ipykernel_9493/461319718.py:17: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, db)\n"
      ]
     }
@@ -126,12 +126,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-16T21:16:54.213607Z",
-     "start_time": "2025-01-16T21:16:54.184610Z"
+     "end_time": "2025-01-20T20:24:03.979624Z",
+     "start_time": "2025-01-20T20:24:03.961026Z"
     }
    },
    "id": "580d1551bdf15058",
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -152,12 +152,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-16T21:16:56.737053Z",
-     "start_time": "2025-01-16T21:16:56.734364Z"
+     "end_time": "2025-01-20T20:24:06.684932Z",
+     "start_time": "2025-01-20T20:24:06.682585Z"
     }
    },
    "id": "b9202f7d8e159a30",
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -193,12 +193,60 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-16T21:18:36.407392Z",
-     "start_time": "2025-01-16T21:18:36.396654Z"
+     "end_time": "2025-01-20T20:24:08.379262Z",
+     "start_time": "2025-01-20T20:24:08.371660Z"
     }
    },
    "id": "e2896a592e46a0b",
-   "execution_count": 7
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       id                         name  duration  popularity  \\\n",
+      "0                                           The Grudge    516000         0.0   \n",
+      "1  000075Sys6SZvjmUtYspEr  Profetizando el Apocalipsis    255240         0.0   \n",
+      "2  0000iGYsxbrtG0PNnL2Mw2            Forbudte følelser    105600        11.0   \n",
+      "3  0000lYJrj5TOfT0xehizaE             Mystical Dancing    202445         0.0   \n",
+      "4  0000sE9YURrbheGf6hN9lx    Corazón - Karaoke Version    185887         6.0   \n",
+      "\n",
+      "  explicit                                        preview_url  \\\n",
+      "0        0                                               None   \n",
+      "1        0  https://p.scdn.co/mp3-preview/2df326ba0c688ebe...   \n",
+      "2        0                                               None   \n",
+      "3        0                                               None   \n",
+      "4        0  https://p.scdn.co/mp3-preview/7c96730763a237df...   \n",
+      "\n",
+      "                                    uri                album_id  \n",
+      "0    spotify:local:Tool::The+Grudge:516                    None  \n",
+      "1  spotify:track:000075Sys6SZvjmUtYspEr  4quYGjnXnL4xuIpSxNFrGE  \n",
+      "2  spotify:track:0000iGYsxbrtG0PNnL2Mw2  4NPe1Iq9dS7vnFBbyc83Um  \n",
+      "3  spotify:track:0000lYJrj5TOfT0xehizaE  5PJVwk83NjyIWggWcZFB75  \n",
+      "4  spotify:track:0000sE9YURrbheGf6hN9lx  7AJupdgqyMsdE7tL6oQCD6  \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"SELECT * FROM track LIMIT 10\"\n",
+    "\n",
+    "# Fetch data into a Pandas DataFrame\n",
+    "df = pd.read_sql(query, engine)\n",
+    "\n",
+    "print(df.head())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-20T20:58:11.824161Z",
+     "start_time": "2025-01-20T20:58:11.798083Z"
+    }
+   },
+   "id": "c2d1d1311543d4cd",
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -208,9 +256,14 @@
     "engine.dispose()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-20T20:23:46.976608Z",
+     "start_time": "2025-01-20T20:23:46.972164Z"
+    }
    },
-   "id": "263f8012be1d0d2a"
+   "id": "263f8012be1d0d2a",
+   "execution_count": 5
   }
  ],
  "metadata": {
